--- a/src/components/pagination/pagination.module.scss
+++ b/src/components/pagination/pagination.module.scss
@@ -3,23 +3,23 @@
     border-radius: 15px;
     width: 55px;
     height: 55px;
-    //background-color: white;
+    background-color: var(--white);
     background-image: url('./images/pagination_prevarrow.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 7px 12px;
-    //border: 1px solid green;
+    border: 1px solid var(--green);
 }
 .nextGroup{
     border-radius: 15px;
     width: 55px;
     height: 55px;
-    //background-color: white;
+    background-color: var(--white);
     background-image: url('./images/pagination_arrow.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 7px 12px;
-    //border: 1px solid green;
+    border: 1px solid var(--green);
 
 }
 
@@ -28,18 +28,18 @@
     border-radius: 15px;
     width: 55px;
     height: 55px;
-    //color: green; 
-    //background=-color: white;
+    color: var(--green); 
+    background-color:var(--white);
     cursor: pointer;
-    //border: 1px solid green;
+      border: 1px solid var(--green);;
 }
 
 .pagebuttonactive{
     border-radius: 15px;
     width: 55px;
     height: 55px;
-    //color: white; 
-    //background-color: green;
-    //border: 1px solid green;
+    color: var(--white); 
+    background-color: var(--green);
+    border: 1px solid var(--green);
     cursor: pointer;
 }
