chore: input 이미지 추가

--- a/src/components/pagination/pagination.module.scss
+++ b/src/components/pagination/pagination.module.scss
@@ -1,45 +1,42 @@
-
-.prevGroup{
-    border-radius: 15px;
-    width: 55px;
-    height: 55px;
-    background-color: var(--white);
-    background-image: url('./images/pagination_prevarrow.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 7px 12px;
-    border: 1px solid var(--green);
+.prevGroup {
+  border-radius: 15px;
+  width: 55px;
+  height: 55px;
+  background-color: var(--white);
+  background-image: url("./images/pagination_prev_arrow.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 7px 12px;
+  border: 1px solid var(--green);
 }
-.nextGroup{
-    border-radius: 15px;
-    width: 55px;
-    height: 55px;
-    background-color: var(--white);
-    background-image: url('./images/pagination_arrow.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 7px 12px;
-    border: 1px solid var(--green);
-
+.nextGroup {
+  border-radius: 15px;
+  width: 55px;
+  height: 55px;
+  background-color: var(--white);
+  background-image: url("./images/pagination_arrow.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 7px 12px;
+  border: 1px solid var(--green);
 }
 
-
-.pagebutton{
-    border-radius: 15px;
-    width: 55px;
-    height: 55px;
-    color: var(--green); 
-    background-color:var(--white);
-    cursor: pointer;
-      border: 1px solid var(--green);;
+.pagebutton {
+  border-radius: 15px;
+  width: 55px;
+  height: 55px;
+  color: var(--green);
+  background-color: var(--white);
+  cursor: pointer;
+  border: 1px solid var(--green);
 }
 
-.pagebuttonactive{
-    border-radius: 15px;
-    width: 55px;
-    height: 55px;
-    color: var(--white); 
-    background-color: var(--green);
-    border: 1px solid var(--green);
-    cursor: pointer;
+.pagebuttonactive {
+  border-radius: 15px;
+  width: 55px;
+  height: 55px;
+  color: var(--white);
+  background-color: var(--green);
+  border: 1px solid var(--green);
+  cursor: pointer;
 }
