feat: 메인페이지 외 컨텐츠 레이아웃 가운데 정렬 적용

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -161,5 +161,20 @@ body {
 
 .app {
   padding-top: 75px;
-  height: calc(100vh - 160px);
+  height: calc(100vh - calc(env(safe-area-inset-bottom)  + 160px));
+}
+
+.layout{
+  height:100%;
+  max-width: 1200px;
+    margin: 0 auto;
+
+    @media (max-width: 1248px) {
+      max-width: auto;
+      padding: 0 24px;
+    }
+
+    @media (max-width: 375px) {
+      padding: 0 20px;
+    }
 }
