feat: 예약 및 체험 내역 빈페이지 & 예약 현황 빈 페이지 UI 구현

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -172,16 +172,15 @@ body {
   display:flex;
   -webkit-flex-direction:column;
   flex-direction:column;
-  justify-content: space-between;
   margin: 0 auto;
   padding-bottom:160px;
 
     @media (max-width: 1248px) {
       max-width: auto;
-      padding: 0 24px;
+      padding: 0 24px 160px;
     }
 
     @media (max-width: 375px) {
-      padding: 0 20px;
+      padding: 0 20px 160px;
     }
 }
