feat:myAcitivty페이지 세팅

--- a/src/app/myactivities/myactivities.module.css
+++ b/src/app/myactivities/myactivities.module.css
@@ -9,16 +9,17 @@
 .title{
   display: flex;
   justify-content: space-between;
+  margin-bottom: 24px;
   
 }
 
 .title p{
-  font-size: 32px;
-  font-style: bold;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 42px;
+font-size: 32px;
+font-style: bold;
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+line-height: 42px;
 }
 
 .custombutton{
