style: 페이지네이션 css  수정 및 케밥 아이콘 작업

--- a/src/app/myactivities/myactivities.module.css
+++ b/src/app/myactivities/myactivities.module.css
@@ -24,7 +24,7 @@
 .custombutton{
     width: 120px;
     height: 48px;
-    display:flex;
+    display:flex !important;
     text-align: center;
     align-items:center;
     justify-content:center;
