--- a/src/app/mynotification/MyNotification.module.css
+++ b/src/app/mynotification/MyNotification.module.css
@@ -1,5 +1,25 @@
-.dropdown {
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 800px;
+  max-width: 100%;
+  margin: 72px auto 0; 
+}
+
+.dropdownTitle{
+  font-size: 12px;
+  font-weight: 400;
+  margin-bottom: 4px;
+}
+
+.dropdownList {
   width: 792px;
   /* max-width: 100%; */
 
+}
+
+.title {
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 38px;
 }
