--- a/src/app/landingComponents/PopularActivities.module.css
+++ b/src/app/landingComponents/PopularActivities.module.css
@@ -8,18 +8,25 @@
     max-width: auto; 
     padding: 0 24px; 
   } 
+  @media (max-width: 450px) {
+    margin: 20px auto 40px;
+  }
   @media (max-width: 375px) { 
     padding: 0 16px; 
   }
 }
 
-/* 🔥 인기 체험 + 버튼을 같은 줄에 정렬 */
+/* 인기 체험 + 버튼을 같은 줄에 정렬 */
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 25px;
   padding: 0;
+
+  @media (max-width: 450px) {
+    margin-bottom: 10px;
+  }
 }
 
 .controls {
@@ -27,24 +34,27 @@
   gap: 8px;
   margin-right: 10px;
 }
-/* 🔄 버튼을 제목 오른쪽으로 이동 */
 .prevButton, 
 .nextButton {
   color: var(--gray-dark);
-  /* font-size: 28px; */
   margin-top: 4px;
   position: static;
   cursor: pointer;
 }
 
-.title {
-  font-size: 32px;
+.header h1 {
+  font-size: 30px;
   font-weight: 700;
-  /* display: flex;
-  align-items: center;
-  gap: 8px; */
+
+  @media (max-width: 768px) {
+    font-size: 28px;
+  }
+  @media (max-width: 450px) {
+    font-size: 20px;
+  }
 }
 
+/* 인기 체험 목록 */
 .carousel {
   display: flex;
   gap: 24px;
@@ -87,15 +97,14 @@
     width: 450px;
   }
 }
-
 .info {
   background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
   color: var(--white);
+  padding: 30px 20px;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 30px 20px;
   position: absolute;
   bottom: 0;
   left: 0;
