--- a/src/app/mynotification/MyNotification.module.css
+++ b/src/app/mynotification/MyNotification.module.css
@@ -1,8 +1,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  width: 800px;
-  max-width: 100%;
+  max-width: 800px;
+  width: 100%;
   margin: 72px auto 0; 
 }
 
@@ -14,7 +14,7 @@
 
 .dropdownList {
   width: 792px;
-  /* max-width: 100%; */
+  max-width: 100%;
 
 }
 
@@ -22,4 +22,18 @@
   font-size: 32px;
   font-weight: 700;
   margin-bottom: 38px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
+}
+
+@media (max-width: 375px) {
+  .container {
+    width: 100%;
+    padding: 0 12px;
+    margin: 0 auto;
+  }
 }
