chore: 컨플릭트 해결

--- a/src/components/pagination/pagination.module.css
+++ b/src/components/pagination/pagination.module.css
@@ -1,90 +1,117 @@
+
+.container{
+  display: flex;
+  gap: 5px;
+}
+
 @media(max-width: 320px){
 
-.prevGroup {
-  border-radius: 15px;
-  width: 40px;
-  height: 40px;
-  background-color: var(--white);
-  background-image: url("./images/pagination_arrow.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 5px 9px;
-  border: 1px solid var(--green);
-}
-.nextGroup {
-  border-radius: 15px;
-  width: 40px;
-  height: 40px;
-  background-color: var(--white);
-  background-image: url("./images/pagination_arrow.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 5px 9px;
-  border: 1px solid var(--green);
-}
+    .prevGroup {
+      border-radius: 15px;
+      width: 40px;
+      height: 40px;
+      background-color: var(--white);
+      background-image: url("/images/pagination_prev_arrow.png");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 5px 9px;
+      border: 1px solid var(--green);
+    }
+    .nextGroup {
+      border-radius: 15px;
+      width: 40px;
+      height: 40px;
+      background-color: var(--white);
+      background-image: url("/images/pagination_arrow.png");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 5px 9px;
+      border: 1px solid var(--green);
+    }
+    
+    .pagebutton {
+      border-radius: 15px;
+      width: 40px;
+      height: 40px;
+      color: var(--green);
+      background-color: var(--white);
+      cursor: pointer;
+      border: 1px solid var(--green);
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 400;
+    }
+    
+    .pagebuttonactive {
+      border-radius: 15px;
+      width: 40px;
+      height: 40px;
+      color: var(--white);
+      background-color: var(--green);
+      border: 1px solid var(--green);
+      cursor: pointer;
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 400;
+    }
+    
+    }
+    
+    
+    .prevGroup {
+      border-radius: 15px;
+      width: 55px;
+      height: 55px;
+      background-color: var(--white);
+      background-image: url("/images/pagination_prev_arrow.png");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 7px 12px;
+      border: 1px solid var(--green);
+    }
+    .nextGroup {
+      border-radius: 15px;
+      width: 55px;
+      height: 55px;
+      background-color: var(--white);
+      background-image: url("/images/pagination_arrow.png");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 7px 12px;
+      border: 1px solid var(--green);
+    }
+    
+    .pagebutton {
+      border-radius: 15px;
+      width: 55px;
+      height: 55px;
+      color: var(--green);
+      background-color: var(--white);
+      cursor: pointer;
+      border: 1px solid var(--green);
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 400;
+    }
+    
+    .pagebuttonactive {
+      border-radius: 15px;
+      width: 55px;
+      height: 55px;
+      color: var(--white);
+      background-color: var(--green);
+      border: 1px solid var(--green);
+      cursor: pointer;
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 400;
+    }
 
-.pagebutton {
-  border-radius: 15px;
-  width: 40px;
-  height: 40px;
-  color: var(--green);
-  background-color: var(--white);
-  cursor: pointer;
-  border: 1px solid var(--green);
-}
-
-.pagebuttonactive {
-  border-radius: 15px;
-  width: 40px;
-  height: 40px;
-  color: var(--white);
-  background-color: var(--green);
-  border: 1px solid var(--green);
-  cursor: pointer;
-}
-
-}
-
-
-.prevGroup {
-  border-radius: 15px;
-  width: 55px;
-  height: 55px;
-  background-color: var(--white);
-  background-image: url("./images/pagination_arrow.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 7px 12px;
-  border: 1px solid var(--green);
-}
-.nextGroup {
-  border-radius: 15px;
-  width: 55px;
-  height: 55px;
-  background-color: var(--white);
-  background-image: url("./images/pagination_arrow.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 7px 12px;
-  border: 1px solid var(--green);
-}
-
-.pagebutton {
-  border-radius: 15px;
-  width: 55px;
-  height: 55px;
-  color: var(--green);
-  background-color: var(--white);
-  cursor: pointer;
-  border: 1px solid var(--green);
-}
-
-.pagebuttonactive {
-  border-radius: 15px;
-  width: 55px;
-  height: 55px;
-  color: var(--white);
-  background-color: var(--green);
-  border: 1px solid var(--green);
-  cursor: pointer;
-}
