--- a/src/styles/Calendar.css
+++ b/src/styles/Calendar.css
@@ -49,7 +49,7 @@
 
 .react-calendar__navigation {
   display: flex;
-  justify-content: space-between; /* 버튼 간격 정렬 */
+  justify-content: center;
   align-items: center;
   padding: 0 10px;
   width: 342px;
@@ -79,6 +79,11 @@
   padding: 0;
   margin: 0;
 }
+
+.react-calendar__navigation__arrow {
+  width: 32px;
+}
+
 
 .react-calendar__month-view__weekdays {
   text-align: center;
@@ -122,7 +127,7 @@
   justify-content: flex-start;
   width: 100%;
   height: 154px; /* 고정 높이 */
-  padding: 10px;
+  padding: 4px;
   background: white;
   text-align: left;
   font-size: 0.833em;
