--- a/src/app/landingComponents/PopularActivities.module.css
+++ b/src/app/landingComponents/PopularActivities.module.css
@@ -33,6 +33,11 @@
   display: flex;
   gap: 8px;
   margin-right: 10px;
+  
+  @media (max-width: 450px) {
+    gap: 4px;
+    margin-right: 0;
+  }
 }
 .prevButton, 
 .nextButton {
@@ -126,11 +131,17 @@
   font-size: 32px;
   font-weight: 700;
   max-width: 245px;
-
+  
+  @media (max-width: 1024px) {
+    font-size: 24px;
+  }
   @media (max-width: 768px) {
     font-size: 30px;
   }
-  @media (max-width: 450px) {
+  @media (max-width: 622px) {
+    font-size: 24px;
+  }
+  @media (max-width: 480px) {
     font-size: 18px;
     line-height: 24px;
   }
@@ -140,10 +151,10 @@
   font-size: 20px;
   font-weight: 700;
 
-  @media (max-width: 768px) {
+  @media (max-width: 920px) {
     font-size: 18px;
   }
-  @media (max-width: 450px) {
+  @media (max-width: 480px) {
     font-size: 16px;
   }
 }
