refactor: 드롭다운컴포넌트 타입정의

--- a/src/components/pagination/pagination.module.css
+++ b/src/components/pagination/pagination.module.css
@@ -4,6 +4,10 @@
   display: flex;
   justify-content: center;
   gap: 5px;
+
+  @media (max-width: 375px) { 
+    padding: 0 16px; 
+  }
 }
 
 @media(max-width: 320px){
