--- a/src/app/mynotification/components/ReservationInfoModal.module.css
+++ b/src/app/mynotification/components/ReservationInfoModal.module.css
@@ -23,6 +23,26 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 24px;
+}
+
+.modalTitle {
+  font-size: 24px;
+  font-weight: 700;
+} 
+
 .closeBtn {
   cursor: pointer !important;
+}
+
+.tabContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 12px;
+  font-size: 20px;
 }
