--- a/src/app/landingComponents/ActivitiesList.module.css
+++ b/src/app/landingComponents/ActivitiesList.module.css
@@ -1,6 +1,6 @@
 .activitiesContainer {
   max-width: 1200px;
-  margin: 30px auto;
+  margin: 0 auto 30px;
 
   @media (max-width: 1248px) { 
     max-width: auto; 
