--- a/src/components/modal/customModal.module.css
+++ b/src/components/modal/customModal.module.css
@@ -57,6 +57,7 @@
 
   .contents.review{
     padding-top:0;
+    max-width: min-content;
 
     .title{
       padding-top:5px;
@@ -76,6 +77,7 @@
         position:relative;
         margin-right:24px;
         width:126px;
+        min-width:126px;
         height:126px;
         border-radius:12px;
         overflow:hidden;
@@ -92,8 +94,14 @@
           border-bottom:1px solid rgba(17, 34, 17, .1);
 
           p:first-child{
-            font-size:20px;
-            font-weight:700
+            min-width: 250px;
+            font-size: 20px;
+            font-weight: 700;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            word-break: break-word;
           }
           p:nth-of-type(2){
             margin:12px 0;
