--- a/src/app/(auth)/signup/components/OauthSignUp.module.css
+++ b/src/app/(auth)/signup/components/OauthSignUp.module.css
@@ -1,4 +1,8 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
   width: 100%;
 }
 
@@ -6,6 +10,7 @@
   display: flex;
   gap: 28px;
   align-items: center;
+  width: 100%;
 }
 
 .header::before,
