--- a/src/app/postMyActivity/components/AddressInput/Input.module.css
+++ b/src/app/postMyActivity/components/AddressInput/Input.module.css
@@ -32,7 +32,7 @@
 .input {
   height: 56px;
   width: 100%;
-  padding: 16px 20px;
+  padding: 16px 0 16px 24px;
   border: 1px solid #79747e;
   border-radius: 4px;
   font-size: 16px;
