--- a/src/app/(auth)/oauth/kakao/signup-callback/components/KaKaoSignUpForm.module.css
+++ b/src/app/(auth)/oauth/kakao/signup-callback/components/KaKaoSignUpForm.module.css
@@ -1,11 +1,13 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 28px;
   margin: 0 auto;
 
   max-width: 640px;
   width: 100%;
+  height: 100%;
   text-align: left;
 }
 
