chore: calendar, profilecard, notiModal loading

--- a/src/app/mynotification/components/Calendar.module.css
+++ b/src/app/mynotification/components/Calendar.module.css
@@ -7,7 +7,7 @@
 }
 
 .loadingTile {
-  background-color: #f0f0f0;
+  background-color: var(--gray-light);
   color: #aaa;
   pointer-events: none;
   opacity: 0.6;
