style: 문화예술, 웰빙 버그 수정 및 css 수정

--- a/src/app/myactivities/components/activitylistcard.module.css
+++ b/src/app/myactivities/components/activitylistcard.module.css
@@ -20,6 +20,8 @@
 .bannerImg{
 width: 204px;
 height: 204px;
+border-top-left-radius: 14px;   /* 왼쪽 위 */
+border-bottom-left-radius: 14px; /* 왼쪽 아래 */
 }
 
 .info{
