--- a/src/app/myactivities/myactivities.module.css
+++ b/src/app/myactivities/myactivities.module.css
@@ -40,6 +40,7 @@ line-height: 42px;
 }
 
 
+
 @media(max-width:768px){
 
   .page_container{
@@ -83,4 +84,14 @@ line-height: 42px;
       justify-content:center;
     }
     
+}
+
+.profileCard {
+  display: flex;
+}
+
+@media (max-width: 430px) {
+  .profileCard {
+    display: none;
+  }
 }
