mediaquery: 체험 등록 페이지 mediaquery 수정 중

--- a/src/app/postMyActivity/components/PostActivity/PostActivity.module.css
+++ b/src/app/postMyActivity/components/PostActivity/PostActivity.module.css
@@ -27,3 +27,19 @@
         align-items:center;
         justify-content:center;
     }
+
+    @media(max-width: 768px){
+        .container{
+            width: 429px;
+        }
+        
+
+    }
+    @media(max-width: 375px){
+        .container{
+            width: 343px;
+        }
+        
+
+    }
+    
