--- a/src/app/postMyActivity/components/AddressInput/Input.module.css
+++ b/src/app/postMyActivity/components/AddressInput/Input.module.css
@@ -68,3 +68,91 @@
 .errorBorder {
   border-color: var(--red);
 }
+
+
+@media(max-width: 768px){
+  .container {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    width: 100%;
+  }
+  
+  .label {
+    font-size: 24px;
+    font-weight: 700;
+    color: #1b1b1b;
+  }
+  
+  .largeLabel {
+    font-size: 24px;
+    font-weight: 700;
+    color: #1b1b1b;
+  }
+  
+  .subContainer {
+    position: relative;
+    display: flex;
+    width: 100%;
+  }
+  
+  .datePickerWrapper {
+    max-width: 800px;
+    width: 100%;
+    display: flex;
+  }
+  
+  .input {
+    height: 56px;
+    width: 100%;
+    padding: 16px 0 16px 24px;
+    border: 1px solid #79747e;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 400;
+  }
+}
+
+
+@media(max-width: 375px){
+  .container {
+    display: flex;
+    flex-direction: column;
+    max-width: 250px;
+    width: 100%;
+  }
+  
+  .label {
+    font-size: 24px;
+    font-weight: 700;
+    color: #1b1b1b;
+  }
+  
+  .largeLabel {
+    font-size: 24px;
+    font-weight: 700;
+    color: #1b1b1b;
+  }
+  
+  .subContainer {
+    position: relative;
+    display: flex;
+    width: 100%;
+  }
+  
+  .datePickerWrapper {
+    max-width: 800px;
+    width: 100%;
+    display: flex;
+  }
+  
+  .input {
+    height: 56px;
+    width: 100%;
+    padding: 16px 0 16px 24px;
+    border: 1px solid #79747e;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 400;
+  }
+}
