--- a/src/app/myactivities/[id]/edit/components/EditMyActivity/editMyActivity.module.css
+++ b/src/app/myactivities/[id]/edit/components/EditMyActivity/editMyActivity.module.css
@@ -27,3 +27,19 @@
         align-items:center;
         justify-content:center;
     }
+
+    @media(max-width: 768px){
+        .container{
+            width: 429px;
+        }
+        
+
+    }
+    @media(max-width: 375px){
+        .container{
+            width: 343px;
+        }
+        
+
+    }
+    
