--- a/src/app/myactivities/[id]/edit/components/customInputs/customTimeSelect.module.css
+++ b/src/app/myactivities/[id]/edit/components/customInputs/customTimeSelect.module.css
@@ -13,3 +13,31 @@
     margin: 0 -8px;
 
 }
+
+@media(max-width: 768px){
+    .select {
+        width: 104px;
+        margin: 0 5px;
+        height: 56px;
+    }
+    .waveSymbol{
+       display: none;
+    
+    }
+}
+
+@media(max-width: 375px){
+    .select {
+        width: 79px;
+        margin: 0 5px;
+        height: 44px;
+    }
+    
+    .select::placeholder{
+        font-size: 12px;
+    }
+    .waveSymbol{
+       display: none;
+    
+    }
+}
