--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -122,10 +122,14 @@
 
   .input {
     width: 100%;
+    height: 44px;
     padding: 16px 20px;
     border: 1px solid #79747e;
     border-radius: 6px;
     font-size: 16px;
     font-weight: 400;
+  }
+  .selectInput{
+    height: 44px;
   }
 }
