--- a/src/app/mynotification/MyNotification.module.css
+++ b/src/app/mynotification/MyNotification.module.css
@@ -30,8 +30,8 @@
 }
 
 .dropdownList {
-  width: 100%;
-  max-width: 792px;
+  width: 792px;
+  max-width: 100%;
   border-radius: 4px;
   text-align: left;
 }
@@ -49,14 +49,9 @@
   .container {
     width: 100%;
   }
-
-  .dropdownList {
-    max-width: 100%;
-    font-size: 14px;
-  }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 375px) {
   .container {
     width: 100%;
     padding: 0 12px;
