--- a/src/components/notification/NotificationModal.module.css
+++ b/src/components/notification/NotificationModal.module.css
@@ -14,7 +14,7 @@
 .modalContent {
   background: var(--gray-green);
   width: 350px;
-  height:450px;
+  max-height: 500px;
   padding: 20px;
   border-radius: 10px;
   display: flex;
