--- a/src/app/mynotification/components/ReservationInfoByStatus.module.css
+++ b/src/app/mynotification/components/ReservationInfoByStatus.module.css
@@ -5,6 +5,7 @@
   border: 1px solid var(--gray-lighter);
   border-radius: 4px;
   overflow-y: auto;
+  margin-bottom: 12px;
 }
 
 .infoContainer {
@@ -69,6 +70,7 @@
 @media (max-width: 768px) {
   .container {
     padding: 8px;
+    border: 1px solid var(--gray-lighter);
   }
 
   .infoContainer {
