--- a/src/app/activities/[id]/components/CalendarModal.module.css
+++ b/src/app/activities/[id]/components/CalendarModal.module.css
@@ -1,19 +1,70 @@
-.dateLabel {
+.tabletDateLabel {
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
   color: var(--nomad-black);
-  margin-bottom: 16px;
 }
 
 .tabletModal {
   width: 480px;
-  height: 600px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border-radius: 24px;
   top: 0;
   right: 0;
+  padding: 24px;
   position: absolute;
   background-color: white;
   border: 1px solid var(--gray-lighter);
   box-shadow: 0 4px 16px color-mix(in srgb, var(--nomad-black) 10%, transparent);
+}
+
+.tabletModalHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.tabletCloseButton {
+  position: relative;
+  width: 40px;
+  height: 40px;
+}
+
+.tabletReservationButton {
+  width: 432px;
+  height: 56px;
+  border-radius: 4px;
+  padding-top: 8px;
+  padding-right: 40px;
+  padding-bottom: 8px;
+  padding-left: 40px;
+}
+
+.mobileModal {
+  width: 100%;
+  height: 100%;
+  border-radius: 0 !important;
+}
+
+.mobileModalHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.mobileDateLabel {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  color: var(--nomad-black);
+}
+
+.mobileCloseButton {
+  position: relative;
+  width: 40px;
+  height: 40px;
 }
