fix: myactivities thumbnail error resolved

--- a/src/app/myactivities/components/activitylistcard.module.css
+++ b/src/app/myactivities/components/activitylistcard.module.css
@@ -20,6 +20,7 @@
 .bannerImg{
 width: 204px;
 height: 204px;
+object-fit: cover;
 border-top-left-radius: 14px;   /* 왼쪽 위 */
 border-bottom-left-radius: 14px; /* 왼쪽 아래 */
 }
